HVAC Backup 2/objects/Exotel_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ACCOUNT_SID__c</fullName>
        <label>ACCOUNT SID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_KEY__c</fullName>
        <label>API KEY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_TOKEN__c</fullName>
        <label>API TOKEN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Header__c</fullName>
        <description>stores auth key + auth secret key</description>
        <label>Auth Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SENDER_ID__c</fullName>
        <label>SENDER ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUB_DOMAIN__c</fullName>
        <label>SUB DOMAIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Exotel Credentials</label>
</CustomObject>